[package]
authors = ["Vinzent Steinberg <Vinzent.Steinberg@gmail.com>"]
name = "rbf"
version = "0.1.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/vks/rbf"
description = "Interpolation using radial basis functions"
readme = "README.md"
categories = ["science"]
edition = "2018"

[dependencies]
nalgebra = "0.18"

[dev-dependencies]
assert_approx_eq = "1"
